[gd_scene load_steps=5 format=2]

[ext_resource path="res://menu/fonts/normal_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://menu/DialogBox.gd" type="Script" id=3]

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="Animation" id=4]
resource_name = "ready"
length = 0.6
loop = true
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Line2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 4 ), Vector2( 0, 0 ), Vector2( 0, 4 ) ]
}

[node name="DialogBox" type="PanelContainer"]
margin_left = -112.0
margin_top = 24.0
margin_right = 112.0
margin_bottom = 60.0
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 220.0
margin_bottom = 32.0

[node name="Message" type="Label" parent="HBoxContainer"]
margin_right = 190.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Beep, beep, I'm a sheep!
ye"
autowrap = true
clip_text = true

[node name="Next" type="Button" parent="HBoxContainer"]
margin_left = 194.0
margin_right = 216.0
margin_bottom = 28.0
text = "  "

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 0, 4 )
points = PoolVector2Array( 206, 15, 214, 15, 210, 19, 206, 15 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "ready"
anims/RESET = SubResource( 3 )
anims/ready = SubResource( 4 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 12, -5 )

[node name="Name" type="Label" parent="Node2D"]
margin_right = 216.0
margin_bottom = 6.0
text = "Super Note"
valign = 1

[node name="CharTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="pressed" from="HBoxContainer/Next" to="." method="_on_Next_pressed"]
[connection signal="timeout" from="CharTimer" to="." method="_on_CharTimer_timeout"]
